  'validation_rules'-property (Frank Sachsenheim).
- New: 'rename'-rule renames a field to a given string during normalization
  (Frank Sachsenheim).
- New: 'rename_handler'-rule that takes an callable that renames unknown
  fields (Frank Sachsenheim).
- New: 'Validator.purge_unknown'-property and conditional purging of unknown fields
  (Frank Sachsenheim).

- Change: The processed root-document of is now available as 'root_document'-
  property of the (child-)Validator (Frank Sachsenheim).
- Change: Removed 'context'-argument from 'validate'-method as this is set
  upon the creation of a child-validator (Frank Sachsenheim).
- Change: 'ValidationError'-exception renamed to 'DocumentError' (Frank Sachsenheim).
- Change: Consolidated all schema-related error-messages' names (Frank Sachsenheim).

- Fix: 'coerce'-constraints are validated (Frank Sachsenheim).
- Fix: Unknown fields are normalized (Frank Sachsenheim).

Version 0.9.1
-------------

Released on July 7 2015

- Fix: 'required' is always evaluated, independent of eventual missing
  dependencies. This changes the previous behaviour whereas a required field
  with dependencies would only be reported as missing if all dependencies were
  met. A missing required field will always be reported. Also see the
  discussion in https://github.com/nicolaiarocci/eve/pull/665.

Version 0.9
-----------

Released on June 24 2015.
Codename: 'Mastrolindo'.

- New: 'oneof' rule which provides a list of definitions in which only one
  should validate (C.D. Clark III).
- New: 'noneof' rule which provides a list of definitions that should all not
  validate (C.D. Clark III).
- New: 'anyof' rule accepts a list of definitions and checks that one
  definition validates (C.D. Clark III).
- New: 'allof' rule validates if if all definitions validate (C.D. Clark III).
- New: 'validator.validated' takes a document as argument and returns
  a validated document or 'None' if validation failed (Frank Sachsenheim).